[package]
name = "id-map"
description = "Data structure of values indexed by IDs."
documentation = "https://docs.rs/id-map/"
repository = "https://github.com/andrewhickman/id-map"
license = "MIT"
version = "0.2.1"
keywords = ["data-structures", "map"]
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]

[dependencies]
id-set = "0.2.1"